# EASy68K

./: CMakeLists.txt
include/: MainFrame.h  Properties.h  asm.h  listing.h
src/: CMakeLists.txt  EASy68K.cpp  LogCtrl.cpp  MainFrame.cpp  Makefile  Properties.cpp  SourceEditCtrl.cpp  assemble.cpp  build.cpp  codegen.cpp  directiv.cpp  error.cpp  eval.cpp  extern.cpp  globals.cpp  instlook.cpp  insttabl.cpp  listing.cpp  macro.cpp  movem.cpp  object.cpp  opparse.cpp  structured.cpp  symbol.cpp
tests/: CMakeLists.txt
